--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
 <body>
   <header>
     <h1>Juma Grivin Muyaka</h1>
-    <p>BI Developer & Aspiring Data Engineer</p>
+    <p>BI Developer/ Data Engineer</p>
     <p><a href="mailto:grivinjuma@gmail.com">grivinjuma@gmail.com</a> | <a href="tel:+254718087082">+254 718 087 082</a></p>
   </header>
 
   <section>
     <h2>About Me</h2>
-    <p>I am a BI Developer with strong foundations in Power BI, SQL, and data reporting. Currently transitioning into Data Engineering, I am pursuing deeper skills in data pipelines, cloud platforms, and large-scale processing. I’m also certified in Python, Cloud Computing, and Cybersecurity with a passion for automation and data insights.</p>
+    <p>I am a versatile BI Developer with strong foundations in Power BI, SQL, and web-based systems, currently transitioning into Data Engineering. I hold certifications in Python, Cloud Computing, and Cybersecurity, and I bring a combination of analytical, development, and digital operations skills to both data and web projects. While my core focus is on data infrastructure and reporting, I also have practical experience managing websites, optimizing CMS platforms, and handling analytics, which makes me a great fit for roles involving web oversight and digital strategy.</p>
   </section>
 
   <section>
     <h2>Skills</h2>
     <div class="skills">
-      <div class="card">Python</div>
+      <div class="card">Power BI & Excel Reporting</div>
+      <div class="card">Python & ETL Automation</div>
       <div class="card">SQL (SSMS, PostgreSQL, MySQL)</div>
-      <div class="card">Power BI</div>
-      <div class="card">Excel & Redgate Monitor</div>
-      <div class="card">Azure & AWS</div>
-      <div class="card">Linux & Windows</div>
+      <div class="card">Azure, AWS & Linux</div>
+      <div class="card">Website Management (WordPress, Joomla, cPanel)</div>
+      <div class="card">SEO, Google Analytics, Email Configurations</div>
     </div>
   </section>
 
@@ -78,15 +78,23 @@
     <div class="projects">
       <div class="card">
         <h3>Sales Dashboard (Power BI)</h3>
-        <p>Created a dynamic sales dashboard analyzing KPIs and trends for regional sales teams.</p>
+        <p>Created a dynamic Power BI dashboard to track KPIs and visualize sales trends for regional teams.</p>
       </div>
       <div class="card">
         <h3>Python Data Pipeline</h3>
-        <p>Built an ETL pipeline to collect, clean, and load web-scraped data into PostgreSQL.</p>
+        <p>Built an automated ETL pipeline to ingest, clean, and store web-scraped data into PostgreSQL for analysis.</p>
       </div>
       <div class="card">
         <h3>Customer Feedback Analytics</h3>
-        <p>Used sentiment analysis on customer reviews to drive UI/UX improvements in client software.</p>
+        <p>Analyzed product reviews with sentiment analysis to guide UI/UX decisions for an e-commerce site.</p>
+      </div>
+      <div class="card">
+        <h3>Website Redesign Project</h3>
+        <p>Managed redesign of a non-profit website using WordPress and Elementor, improving speed and mobile UX.</p>
+      </div>
+      <div class="card">
+        <h3>SEO Audit & Optimization</h3>
+        <p>Performed technical SEO audits using Google Search Console and RankMath to increase organic visibility.</p>
       </div>
     </div>
   </section>
@@ -95,8 +103,8 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:grivinjuma@gmail.com">grivinjuma@gmail.com</a></p>
     <p>Phone: <a href="tel:+254718087082">+254 718 087 082</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/grivin">linkedin.com/in/grivin</a></p>
-    <p>GitHub: <a href="https://github.com/grivtech">github.com/grivtech</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/juma-muyaka-090819234/">linkedin.com/in/juma-muyaka-090819234</a></p>
+    <p>GitHub: <a href="https://github.com/grivtech">github.com/UncleVirus</a></p>
   </section>
 
   <footer>
@@ -104,3 +112,4 @@
   </footer>
 </body>
 </html>
+
