--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Juma Grivin Muyaka | Portfolio</title>
+  <title>Juma Grivin Muyaka | Virtual Assistant Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -52,49 +52,45 @@
 <body>
   <header>
     <h1>Juma Grivin Muyaka</h1>
-    <p>BI Developer/ Data Engineer</p>
+    <p>Virtual Assistant | Team Lead | Tech-Savvy Operator</p>
     <p><a href="mailto:grivinjuma@gmail.com">grivinjuma@gmail.com</a> | <a href="tel:+254718087082">+254 718 087 082</a></p>
   </header>
 
   <section>
     <h2>About Me</h2>
-    <p>I am a versatile BI Developer with strong foundations in Power BI, SQL, and web-based systems, currently transitioning into Data Engineering. I hold certifications in Python, Cloud Computing, and Cybersecurity, and I bring a combination of analytical, development, and digital operations skills to both data and web projects. While my core focus is on data infrastructure and reporting, I also have practical experience managing websites, optimizing CMS platforms, and handling analytics, which makes me a great fit for roles involving web oversight and digital strategy.</p>
+    <p>I am a reliable and proactive Virtual Assistant with experience supporting founders, managing remote teams, and streamlining digital operations. My background combines admin support, SOP development, team leadership, and tech-savvy execution using tools like Slack, Asana, Google Workspace, and Canva. I’ve worked with brands in fast-paced industries — including adult content — where discretion, speed, and independent problem-solving are key. I take ownership of outcomes and thrive when helping others stay organized, focused, and ahead of schedule.</p>
   </section>
 
   <section>
     <h2>Skills</h2>
     <div class="skills">
-      <div class="card">Power BI & Excel Reporting</div>
-      <div class="card">Python & ETL Automation</div>
-      <div class="card">SQL (SSMS, PostgreSQL, MySQL)</div>
-      <div class="card">Azure, AWS & Linux</div>
-      <div class="card">Website Management (WordPress, Joomla, cPanel)</div>
-      <div class="card">SEO, Google Analytics, Email Configurations</div>
+      <div class="card">Calendar & Inbox Management</div>
+      <div class="card">SOP Creation & Team Onboarding</div>
+      <div class="card">Project Coordination (Asana, Trello, ClickUp)</div>
+      <div class="card">Slack, Gmail, Zoom & Google Workspace</div>
+      <div class="card">Social Media Management & Canva Graphics</div>
+      <div class="card">AI Tools (ChatGPT, Claude, Copy.ai)</div>
     </div>
   </section>
 
   <section>
-    <h2>Projects</h2>
+    <h2>Projects & Experience</h2>
     <div class="projects">
       <div class="card">
-        <h3>Sales Dashboard (Power BI)</h3>
-        <p>Created a dynamic Power BI dashboard to track KPIs and visualize sales trends for regional teams.</p>
+        <h3>Chat Team Leader (Chatstars & Arion)</h3>
+        <p>Led and supported high-performing chat teams, created SOPs, trained new hires, tracked KPIs, and ensured top-tier client communication and performance.</p>
       </div>
       <div class="card">
-        <h3>Python Data Pipeline</h3>
-        <p>Built an automated ETL pipeline to ingest, clean, and store web-scraped data into PostgreSQL for analysis.</p>
+        <h3>Founder Support & VA Tasks</h3>
+        <p>Handled calendar management, inbox triage, meeting prep, travel research, and follow-ups for busy executives — often making decisions independently to save time.</p>
       </div>
       <div class="card">
-        <h3>Customer Feedback Analytics</h3>
-        <p>Analyzed product reviews with sentiment analysis to guide UI/UX decisions for an e-commerce site.</p>
+        <h3>Content & Scheduling</h3>
+        <p>Created and scheduled social media posts using pre-built calendars, designed Canva graphics, and tracked performance metrics for campaign improvement.</p>
       </div>
       <div class="card">
-        <h3>Website Redesign Project</h3>
-        <p>Managed redesign of a non-profit website using WordPress and Elementor, improving speed and mobile UX.</p>
-      </div>
-      <div class="card">
-        <h3>SEO Audit & Optimization</h3>
-        <p>Performed technical SEO audits using Google Search Console and RankMath to increase organic visibility.</p>
+        <h3>SOP & Documentation Projects</h3>
+        <p>Audited existing workflows, built structured documentation for team processes, and streamlined communication protocols using Notion and Google Docs.</p>
       </div>
     </div>
   </section>
@@ -112,4 +108,3 @@
   </footer>
 </body>
 </html>
-
