--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Juma Grivin Muyaka | Virtual Assistant & Data Engineer</title>
+  <title>Juma Grivin Muyaka | Virtual Assistant & Data Professional</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -18,11 +18,26 @@
       color: white;
       padding: 3rem 2rem;
       text-align: center;
+      position: relative;
     }
     header img {
       width: 120px;
       border-radius: 50%;
       margin-bottom: 1rem;
+    }
+    .cta {
+      margin-top: 1rem;
+      display: inline-block;
+      padding: 0.7rem 1.4rem;
+      background: #00c6ff;
+      color: white;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .cta:hover {
+      background: #00a4d3;
     }
     section {
       padding: 2.5rem 1.5rem;
@@ -52,6 +67,17 @@
       border-radius: 8px;
       margin-bottom: 0.8rem;
     }
+    .footer-links {
+      margin-top: 1rem;
+      display: flex;
+      justify-content: center;
+      gap: 1.2rem;
+      flex-wrap: wrap;
+    }
+    .footer-links a {
+      color: #eee;
+      text-decoration: none;
+    }
     footer {
       text-align: center;
       padding: 2rem;
@@ -70,6 +96,7 @@
     <h1>Juma Grivin Muyaka</h1>
     <p>Virtual Assistant | Data & AI Professional | Team Leader</p>
     <p><a href="mailto:grivinjuma@gmail.com">grivinjuma@gmail.com</a> | <a href="tel:+254718087082">+254 718 087 082</a></p>
+    <a class="cta" href="#contact">Let’s Work Together</a>
   </header>
 
   <section>
@@ -85,8 +112,8 @@
       <div class="card">SOP Creation & Documentation</div>
       <div class="card">Social Media Scheduling & Canva</div>
       <div class="card">Slack, Zoom, Notion & Asana</div>
-      <div class="card">Python & ETL Workflows</div>
-      <div class="card">SQL, Power BI & Data Analysis</div>
+      <div class="card">Python, Pandas & ETL Workflows</div>
+      <div class="card">SQL, Power BI & Data Visualization</div>
       <div class="card">AI Tools (ChatGPT, Claude, Copy.ai)</div>
       <div class="card">Web & CMS Management (WordPress, cPanel)</div>
     </div>
@@ -128,7 +155,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:grivinjuma@gmail.com">grivinjuma@gmail.com</a></p>
     <p>Phone: <a href="tel:+254718087082">+254 718 087 082</a></p>
@@ -138,6 +165,11 @@
 
   <footer>
     <p>&copy; 2025 Juma Grivin Muyaka | Virtual Assistant & Data Professional</p>
+    <div class="footer-links">
+      <a href="mailto:grivinjuma@gmail.com">Email</a>
+      <a href="https://github.com/grivtech">GitHub</a>
+      <a href="https://www.linkedin.com/in/juma-muyaka-090819234/">LinkedIn</a>
+    </div>
   </footer>
 </body>
 </html>
