--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
       color: #007acc;
       text-decoration: none;
     }
+    .image-strip {
+      display: flex;
+      gap: 1rem;
+      overflow-x: auto;
+      padding: 1rem 0;
+    }
+    .image-strip img {
+      height: 120px;
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
@@ -101,6 +111,11 @@
 
   <section>
     <h2>About Me</h2>
+    <div class="image-strip">
+      <img src="https://cdn.dribbble.com/userupload/9589534/file/original-e01f146fd1bdb97f7c6fc66f42e6dc5a.png" alt="AI automation" />
+      <img src="https://assets-global.website-files.com/63229bbd4c32de4292167d52/63dfd0a0132c1f0bb96db4ec_optimized%20VA%20services.png" alt="Virtual Assistant tools" />
+      <img src="https://miro.medium.com/v2/resize:fit:1000/format:webp/1*RLx3zJ3CHsmqvx5_o-hHjA.png" alt="Data analysis" />
+    </div>
     <p>I’m a highly adaptable Virtual Assistant and Data Professional with experience supporting high-level executives, managing digital operations, and leading teams in fast-paced environments. I bring a unique blend of admin expertise, project coordination, AI-assisted productivity, and technical experience in data engineering, analytics, and automation. Whether streamlining workflows, building dashboards, or managing chat teams, I approach every task with ownership, precision, and a results-driven mindset.</p>
   </section>
 
